--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 .back-video{
     position: fixed;
-    right: 0;
-    bottom: 0;
+    left: 0;
+    top: 0;
     min-width: 100%; 
     min-height: 100%;
     z-index: -1;
@@ -43,6 +43,9 @@
     transform: translate(-50%, -50%);
     height: 50%;
     pointer-events: none;
+}
+.player-container .play{
+    cursor: pointer;
 }
 .time-display{
     position: absolute;
